pkg/cap/msg/errors/handle/example/consts.i18n.go
// generated by cap, DO NOT EDIT.
package main

import (
	"fmt"

	"framework/pkg/cap/msg/i18n"
	"golang.org/x/text/language"
)

// supported languages:
var (
	Lang_zhCN       = language.Make("zh-CN")
	languageMatcher = language.NewMatcher([]language.Tag{Lang_zhCN})
)

// language matcher
func MatchLang(lang string) (tag language.Tag, err error) {
	langTag := language.Make(lang)
	matchedTag, _, c := languageMatcher.Match(langTag)
	if c < language.High {
		return matchedTag, fmt.Errorf("no confidence language matched")
	}
	return matchedTag, nil
}

// language id definitions:
// ERR_INTERNAL_1 内部错误1
const ERR_INTERNAL_1 = i18n.TrID("v_example_ERR_INTERNAL_1")

// ERR_INTERNAL_2 内部错误2[%v]
const ERR_INTERNAL_2 = i18n.TrID("v_example_ERR_INTERNAL_2")
